--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -23,7 +23,8 @@ body {
     background-color: var(--background-color);
 }
 
-* {
+*,
+body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
