--- a/src/assets/css/media-queries.css
+++ b/src/assets/css/media-queries.css
@@ -1,5 +1,3 @@
-/* Base styles for small screens (mobile devices) */
-
 @media (max-width: 600px) {
     .e-marambo-main-container {
         height: 90vh;
@@ -24,14 +22,19 @@
     .skills-title {
         font-size: 2rem;
     }
+    .skills-section {
+        margin: 0;
+        padding: 0;
+    }
     .e-marambo-loader-circle,
     .arrow {
         display: none;
     }
+    .project-title {
+        font-size: 1.4rem;
+        padding-inline: 3rem;
+    }
 }
-
-
-/* Medium devices (tablets) */
 
 @media (min-width: 600px) and (max-width: 992px) {
     .e-marambo-hero-title {
@@ -48,25 +51,34 @@
         display: none;
     }
     .skills-box {
-        padding: 1.5rem;
+        padding: 1.4rem;
+    }
+    .project-title {
+        font-size: 1.6rem;
+        padding-inline: 3rem;
+    }
+    .marambo-projects-container-mobile {
+        padding: 5rem;
+        align-items: center;
     }
 }
 
-
-/* Large devices (desktops) */
-
 @media (min-width: 992px) {
-    .projects-grid {
-        grid-template-columns: repeat(2, 1fr);
-        grid-gap: 2rem;
-        margin: 2rem 5rem;
+    .marambo-projects-container-desktop {
+        display: flex;
+        flex-direction: column;
+    }
+    .marambo-projects-container-mobile {
+        display: none;
     }
     .skills-grid {
+        display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-gap: 2rem;
         margin: 2rem 15rem;
     }
     .marambo-projects-grid {
+        display: grid;
         grid-template-columns: repeat(3, 1fr);
     }
     .center-box {
@@ -93,10 +105,14 @@
         position: relative;
         grid-column: span 1;
         width: 100%;
-        height: 100%
+        height: 100%;
     }
     .e-marambo-loader-circle,
     .arrow {
         display: flex;
+    }
+    .project-title {
+        font-size: 1.5rem;
+        padding-inline: 3rem;
     }
 }
