--- a/src/styles.css
+++ b/src/styles.css
@@ -2,13 +2,12 @@
 @import url('./assets/css/animations.css');
 .e-marambo-main-container {
     width: 100dvw;
-    height: 100vh;
+    height: 95dvh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: var(--dark-blue);
-    position: relative;
     gap: 2rem;
 }
 
@@ -16,7 +15,6 @@
     text-align: center;
     padding: 1.5rem;
     backdrop-filter: blur(10px);
-    opacity: 0;
 }
 
 .e-marambo-hero-title {
@@ -26,7 +24,6 @@
     color: var(--light-orange);
     margin-bottom: 1rem;
     transform: translateY(-50px);
-    opacity: 0;
     animation: titleSlideIn 1.5s ease-in-out forwards;
 }
 
@@ -37,8 +34,8 @@
     color: var(--dark-orange);
     margin-bottom: 1.5rem;
     transform: translateX(-100%);
-    opacity: 0;
     animation: positionSlideIn 1.5s ease-in-out forwards;
+    opacity: 0;
     animation-delay: 2s;
 }
 
@@ -115,8 +112,8 @@
 }
 
 .skills-section {
-    padding: 1rem;
     text-align: center;
+    width: 100%;
 }
 
 .skills-title {
@@ -132,12 +129,15 @@
 }
 
 .skills-grid {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem;
+    gap: 2rem;
 }
 
 .skills-box {
+    width: 95%;
     background-color: var(--light-blue);
     padding: 2rem;
     border-radius: 10px;
@@ -211,7 +211,8 @@
     color: var(--white);
 }
 
-.marambo-projects-container {
+.marambo-projects-container-desktop {
+    display: none;
     background-image: linear-gradient(220deg, var(--dark-blue), var(--primary-blue));
     align-items: center;
     justify-content: center;
@@ -224,11 +225,20 @@
     gap: 2rem;
 }
 
+.marambo-projects-container-mobile {
+    background-image: linear-gradient(220deg, var(--dark-blue), var(--primary-blue));
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    justify-items: center;
+    padding: 1rem;
+}
+
 .marambo-project-card-grid {
-    padding: 2rem;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(2, 300px);
+    row-gap: 6rem;
 }
 
 .projects-title {
@@ -245,7 +255,7 @@
 
 .project-card {
     background-color: var(--light-blue);
-    padding: 2rem;
+    padding-block: 1rem;
     border-radius: 10px;
     height: 400px;
     clip-path: polygon(25% 6.7%, 75% 6.7%, 100% 50%, 75% 93.3%, 25% 93.3%, 0% 50%);
@@ -265,7 +275,7 @@
 
 .project-title {
     text-align: center;
-    font-size: 1.6rem;
+    font-size: 1.2rem;
     padding-inline: 1.5rem;
 }
 
@@ -279,7 +289,7 @@
 
 .project-technologies {
     text-align: center;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     padding-inline: 2rem;
 }
 
